--- a/JavaPractice1/.project
+++ b/JavaPractice1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>javaPractice2</name>
+	<name>JavaPractice1</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1756987324729</id>
+			<id>1756987324724</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
