--- a/JavaPractice2/.project
+++ b/JavaPractice2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>javaPractice1</name>
+	<name>JavaPractice2</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1756987324724</id>
+			<id>1756987324729</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
